# pubky-core

./: .gitignore  404.html  CONTRIBUTORS.md  Cargo.toml  Cross.toml  Dockerfile  README.md  RELEASING.md  entrypoint.sh  index.html  overview.html  print.html  release.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-0fbc3b0a.js  searchindex-1d2ec532.js  searchindex-2adaa9f0.js  searchindex-c4b53002.js  searchindex.js  searchindex.json  toc-69200eeb.js  toc-77b5a118.js  toc-9bf9d4fc.js  toc.html  toc.js
common/: Cargo.toml
common/src/: auth.rs  crypto.rs  error.rs  lib.rs  namespaces.rs  pkarr.rs  time.rs  url.rs
common/src/homeserver/: auth.rs  challenge.rs
e2e/: Cargo.toml  README.md
e2e/src/: lib.rs
e2e/src/tests/: admin.rs  auth.rs  events.rs  http.rs  metrics.rs  mod.rs  private_data.rs  public.rs  rate_limiting.rs  storage.rs  utils.rs
examples/: Cargo.toml  README.md  cargo.toml  sample_recovery.key
examples/auth_flow/: README.md  authenticator.rs
examples/auth_flow/3rd-party-app/: package-lock.json  package.json
examples/authn/: README.md  signup.rs
examples/authz/: README.md  authenticator.rs
examples/authz/3rd-party-app/: .eslintrc.json  .prettierrc  index.html  package-lock.json  package.json  vite.config.js
examples/authz/authenticator/: Cargo.toml
examples/javascript/: 0-check-testnet.mjs  0-logging.mjs  1-logging.mjs  1-signup.mjs  1-testnet.mjs  2-authenticator.mjs  2-signup.mjs  3-authenticator.mjs  3-storage.mjs  4-request.mjs  4-storage.mjs  5-request.mjs  6-check-testnet.mjs  7-logging.mjs  8-session-management.mjs  README.md  _cli.mjs  _testnet.mjs  package-lock.json  package.json
examples/javascript/2-auth-flow/: README.md  index.html  package.json
examples/javascript/5-browser-session-persistence/: README.md  index.html  package.json
examples/javascript/6-browser-session-persistence/: README.md
examples/nodejs/: .gitignore  README.md  index.js  package.json
examples/request/: README.md  main.rs
examples/rust/: Cargo.toml  README.md  keygen.rs  recovery.rs  testnet.rs
examples/rust/0-logging/: README.md  main.rs
examples/rust/1-signup/: README.md  signup.rs
examples/rust/1-testnet/: README.md  main.rs
examples/rust/2-auth_flow/: README.md  authenticator.rs  client.rs
examples/rust/2-signup/: README.md  signup.rs
examples/rust/3-auth_flow/: README.md  authenticator.rs
examples/rust/3-storage/: README.md  main.rs
examples/rust/4-storage/: README.md  main.rs  read.rs  write.rs
examples/rust/5-request/: README.md  main.rs
examples/rust/6-auth_flow_signup/: README.md  authenticator.rs
examples/rust/6-event_stream/: README.md  main.rs
examples/rust/6-events_stream/: README.md  main.rs
examples/rust/7-event-stream/: README.md  main.rs
examples/rust/7-events_stream/: main.rs
examples/rust/7-session_management/: README.md  main.rs
examples/rust/9-testnet/: main.rs
examples/signup/: README.md  signup.rs
examples/storage/: README.md  main.rs
examples/testnet/: README.md  main.rs
homeserver/: Cargo.toml  README.md
homeserver-cli/: Cargo.toml  README.md  config.sample.toml  config.toml
homeserver-cli/src/: cli.rs  logs.rs  main.rs
homeserver/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  pkarr.rs  routes.rs  server.rs
http-relay/: Cargo.toml  README.md  cargo.toml
http-relay/src/: http_relay.rs  lib.rs  waiting_list.rs
kytes/: Cargo.toml
kytes/src/: crypto.rs  error.rs  keys.rs  lib.rs  main.rs  passphrase.rs
kytes/src/crypto/: mod.rs  (+3 more)
kytz/: Cargo.toml
kytz/src/: error.rs  lib.rs  main.rs
pkarr-publisher/: .gitignore  Cargo.toml  README.md  published_secrets.txt
pkarr-publisher/src/: lib.rs  multi_republisher.rs  pkarr_publisher.rs  publisher.rs  republisher.rs  resilient_client.rs  single_key_publisher.rs  verify.rs
pkarr-republisher/: .gitignore  Cargo.toml  README.md
pkarr-republisher/examples/: publish_and_save.rs  read_and_republish.rs  read_and_verify.rs
pkarr-republisher/src/: lib.rs  multi_republisher.rs  publisher.rs  republisher.rs  resilient_client.rs  verify.rs
pubky/: Cargo.toml  README.md  build.rs
pubky-client/: Cargo.toml  README.md  a.txt  pre-release-hook.sh  print_files.sh  release.toml
pubky-client/pkg/: README.md  package.json  synonymdev-pubky-0.5.0-rc.0.tgz
pubky-client/src/: agent.rs  client.rs  constants.rs  errors.rs  http.rs  http_client.rs  lib.rs  macros.rs  native.rs  native_http_client.rs  prelude.rs  types.rs  util.rs  utils.rs
pubky-common/: Cargo.toml  README.md
pubky-common/src/: auth.rs  capabilities.rs  constants.rs  crypto.rs  events.rs  keys.rs  lib.rs  namespaces.rs  recovery_file.rs  session.rs  storage.rs  timestamp.rs
pubky-homeserver/: ARCHITECTURE.md  Cargo.toml  README.md  config.default.toml  config.sample.toml  default.tos.html  openapi-admin.yml  openapi-client.yml  openapi.yml
pubky-homeserver/docs/: rate-limits.md
pubky-homeserver/src/: app_context.rs  config.example.toml  config.rs  config.toml  config_old.rs  constants.rs  context.rs  core.rs  database.rs  error.rs  extractors.rs  homeserver_app.rs  lib.rs  main.rs  observability.rs  pkarr.rs  routes.rs  server.rs  tracing.rs  user_keys_republisher.rs
pubky-sdk/: Cargo.toml  README.md  print_files.sh  rust_crate.txt
pubky-sdk/src/: auth.rs  auth_flow.rs  errors.rs  global.rs  lib.rs  macros.rs  pkdns.rs  prelude.rs  pubky.rs  util.rs
pubky-testnet/: CHANGELOG.md  Cargo.toml  README.md
pubky-testnet/src/: common.rs  docker_postgres.rs  embedded_postgres.rs  ephemeral_testnet.rs  fixed_testnet.rs  flexible_testnet.rs  lib.rs  main.rs  simple_testnet.rs  static_testnet.rs  testnet.rs
pubky-testnet/tests/: atexit_cleanup.rs  signal_cleanup.rs
pubky/pkg/: .gitignore  README.md  index.cjs  index.js  node-header.cjs  package.json
pubky/src/: client.rs  client_async.rs  common.rs  error.rs  lib.rs  native.rs  test_helpers.rs  wasm.rs
sdk/: Cargo.toml
sdk/src/: client.rs  lib.rs
test_utils/drop_db_helper/: Cargo.toml  README.md
test_utils/pubky_test/: Cargo.toml  README.md
test_utils/test_macro/: Cargo.toml  README.md
(+1045 files in other folders)
