[workspace]
members = [
  "pubky-*",
  "pubky-sdk/bindings/js",
  "e2e",
  "test_utils/test_macro",
  "test_utils/drop_db_helper",
  "test_utils/pubky_test",
  "examples/rust",
]
default-members = [
  "pubky-common",
  "pubky-homeserver",
  "pubky-testnet",
  "pubky-sdk",
] # `ws publish` will only attempt to publish these ones.
resolver = "2"

[workspace.package]
rust-version = "1.89"
edition = "2021"
authors = [
  "SeverinAlexB <severin@synonym.to>",
  "SHAcollision <shacollision@synonym.to>",
  "Nuh <nuh@nuh.dev>",
]
license = "MIT"
homepage = "https://github.com/pubky/pubky-core"
repository = "https://github.com/pubky/pubky-core"


[profile.release]
lto = true
opt-level = 'z'


[workspace.dependencies]
# Setting "default-features = false" because cargo doesn't allow member crates to override the root "default-features" flag, which if not set, is implied to be true.
# Member crates that need "default-features = false" should leave it out of their dependency specification, as it's inherited from here.
# Member crates that need "default-features = true" should add a "default" feature to the features list, which is equivalent.
pkarr = { version = "5.0.3", default-features = false }
mainline = { version = "6.1.1" }
pkarr-relay = { version = "0.11.4" }
log = "0.4.29"
url = "2.5.8"
anyhow = "1.0.101"
axum = "0.8.8"
axum-server = "0.8.0"
reqwest = { version = "0.13.2", default-features = false }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio = "1.49.0"
tower-http = "0.6.8"
thiserror = "2.0.18"
clap = "4.5.58"
http-relay = "0.7.0"
