[workspace]
members = [
  "pubky-*",
  "pubky-sdk/bindings/js",
  "e2e",
  "examples/rust",
]
exclude = [
  "test_utils/test_macro",
  "test_utils/drop_db_helper",
  "test_utils/pubky_test",
]
default-members = [
  "pubky-common",
  "pubky-homeserver",
  "pubky-testnet",
  "pubky-sdk",
] # `ws publish` will only attempt to publish these ones.
resolver = "2"

[workspace.package]
version = "0.10.0-alpha.0"
rust-version = "1.89"
edition = "2021"
authors = [
  "SeverinAlexB <severin@synonym.to>",
  "SHAcollision <shacollision@synonym.to>",
  "Nuh <nuh@nuh.dev>",
]
license = "MIT"
homepage = "https://github.com/pubky/pubky-core"
repository = "https://github.com/pubky/pubky-core"


[profile.release]
lto = true
opt-level = 'z'


[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
axum-server = "0.8"
base32 = "0.5"
base64 = "0.22"
bytes = "1"
clap = "4"
eventsource-stream = "0.2"
futures-util = "0.3"
http-relay = "0.7"
httpdate = "1"
js-sys = "0.3"
log = "0.4"
pkarr = { version = "6", default-features = false }
pkarr-relay = { version = "0.12" }
pubky = { path = "pubky-sdk", version = "0.10.0-alpha.0", default-features = false }
pubky-common = { path = "pubky-common", version = "0.10.0-alpha.0" }
pubky-homeserver = { path = "pubky-homeserver", version = "0.10.0-alpha.0", default-features = false }
pubky-testnet = { path = "pubky-testnet", version = "0.10.0-alpha.0" }
pubky_test_utils = { path = "test_utils/pubky_test", version = "0.1" }
rand = "0.10"
reqwest = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
# pubky-testnet's docker-postgres feature uses tokio::sync::OnceCell::const_new,
# which is generally available starting in Tokio 1.30.0 (released 2023-08-09).
tokio = "1.30"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
wasm-bindgen-futures = "0.4"
# Same version as used by reqwest version defined above
wasm-streams = "0.5"
