[package]
name = "pk-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.5.0"
blake3 = "1.5.1"
ed25519-dalek = "2.1.1"
once_cell = "1.19.0"
pkarr = { version = "2.0.1", default-features = false, features = ["rand"] }
rand = "0.8.5"
thiserror = "1.0.60"
