[package]
name = "e2e"
edition.workspace = true
rust-version.workspace = true
version = "0.7.0"
publish = false

[dependencies]
pubky-testnet = { path = "../pubky-testnet" , version = "0.7.0" }
pubky-common = { path = "../pubky-common" , version = "0.7.0" }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true
pkarr = { workspace = true }
bytes = "1.10.1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
eventsource-stream = "0.2"
futures = "0.3"
