[package]
name = "e2e"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dev-dependencies]
base64.workspace = true
bytes.workspace = true
eventsource-stream.workspace = true
futures = "0.3"
pubky-testnet.workspace = true
rand = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
