[package]
name = "examples"
version = "0.6.0-rc.2"
edition.workspace = true
publish = false

[[bin]]
name = "signup"
path = "./authn/signup.rs"

[[bin]]
name = "authenticator"
path = "./authz/authenticator.rs"

[[bin]]
name = "request"
path = "./request/main.rs"

[[bin]]
name = "testnet"
path = "./testnet/main.rs"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive"] }
pubky = { path = "../pubky-sdk", version = "0.6.0-rc.2" }
pubky-testnet = { path = "../pubky-testnet", version = "0.6.0-rc.2" }
pubky-common = { path = "../pubky-common", version = "0.6.0-rc.2" }
reqwest = "0.12.23"
rpassword = "7.4.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"
