[package]
name = "authn"
version = "0.5.1"
edition.workspace = true
publish = false

[[bin]]
name = "signup"
path = "./authn/signup.rs"

[[bin]]
name = "authenticator"
path = "./authz/authenticator.rs"

[[bin]]
name = "request"
path = "./request/main.rs"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive"] }
pubky = { path = "../pubky-client", version = "0.5.1" }
pubky-common = { path = "../pubky-common", version = "0.5.1" }
reqwest = "0.12.23"
rpassword = "7.4.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"
