[package]
name = "homeserver-cli"
description = "Pubky homeserver cli."
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["cli", "homeserver", "pubky"]
categories = ["web-programming", "authentication", "cryptography"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
toml = "0.8"
dirs = "6.0"
rpassword = "7.5.4"
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json = "1.0.151"
