[package]
name = "pk-homeserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
heed = { version = "0.20.0", default-features = false }
dirs-next = "2.0.0"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
tower-cookies = "0.10.0"
pk-common = { version = "0.1.0", path = "../common" }
bytes = "1.6.0"
http = "1.1.0"
time = "0.3.36"
rkyv = { version = "0.7.44", features = ["bytecheck", "bytes", "validation", "strict"] }
pkarr = { version = "2.0.1", features = ["async"] }
