[package]
name = "http-relay"
description = "A Rust implementation of _some_ of [Http relay spec](https://httprelay.io/)."
version = "0.5.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["httprelay", "http", "relay"]
categories = ["web-programming"]

[dependencies]
anyhow = "1.0.98"
axum = "0.8.1"
axum-server = "0.7.2"
futures-util = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

[dev-dependencies]
axum-test = "17.3.0"
