[package]
name = "http-relay"
description = "A Rust implementation of _some_ of [Http relay spec](https://httprelay.io/)."
version = "0.5.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["httprelay", "http", "relay"]
categories = ["web-programming"]

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
axum-server = "0.8.0"
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
url = "2.5.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

[dev-dependencies]
axum-test = "18.2.1"
