[package]
name = "http-relay"
description = "A Rust implementation of _some_ of [Http relay spec](https://httprelay.io/)."
version = "0.5.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["httprelay", "http", "relay"]
categories = ["web-programming"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tracing.workspace = true
url.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }

[dev-dependencies]
axum-test = "17.3.0"
