[package]
name = "kytes"
version = "0.1.0"
edition = "2021"
description = "Soaring in the Cloud, but you pull the strings."
license = "MIT"

[dependencies]
bytes = "1.5.0"
rand = "0.8.5"
z32 = "1.0.2"

# cli
clap = { version = "4.4.11", optional = true, features = ["derive"] }
argon2 = "0.5.2"
thiserror = "1.0.50"
bessie = "0.0.1"

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "kytes"
required-features = ["cli"]
