[package]
name = "kytes"
version = "0.1.0"
edition = "2021"
description = "Soaring in the Cloud, but you pull the strings."
license = "MIT"

[dependencies]
argon2 = "0.5.2"
bessie = "0.0.1"
bytes = "1.5.0"
rand = "0.8.5"
thiserror = "1.0.50"
z32 = "1.0.2"

# cli
clap = { version = "4.4.11", optional = true, features = ["derive"] }
dirs-next = { version = "2.0.0", optional = true }

[features]
default = ["cli"]
cli = ["clap", "dirs-next"]

[[bin]]
name = "kytes"
required-features = ["cli"]
