[package]
name = "pkarr-republisher"
description = "A pkarr packet republisher."
version = "0.5.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["pkarr", "mainline", "pubky"]
categories = ["web-programming"]

[dependencies]
anyhow = "1.0.101"
pkarr = { workspace = true, features = ["default"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
futures-lite = { version = "2.6.1" }
thiserror = "2.0.18"

# bin dependencies
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ctrlc = "3.5.2"
hex = "0.4.3"
rand = "0.10.0"
