[package]
name = "pkarr-republisher"
description = "A pkarr packet republisher."
version = "0.5.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["pkarr", "mainline", "pubky"]
categories = ["web-programming"]

[dependencies]
anyhow.workspace = true
pkarr = { workspace = true, features = ["default"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing.workspace = true
futures-lite = { version = "2.6.1" }
thiserror.workspace = true

# bin dependencies
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ctrlc = "3.5.0"
hex = "0.4.3"
rand = "0.9.2"
