[package]
name = "pubky"
description = "Pubky-Core Client"
version = "0.5.4"
edition = "2024"
authors = [
    "SeverinAlexB <severin@synonym.to>",
    "SHAcollision <shacollision@synonym.to>",
    "Nuh <nuh@nuh.dev>",
]
license = "MIT"
homepage = "https://github.com/pubky/pubky-core"
repository = "https://github.com/pubky/pubky-core"

keywords = ["web", "dht", "dns", "decentralized", "identity"]
categories = [
    "network-programming",
    "cryptography",
    "web-programming",
    "authentication",
]

[lib]
crate-type = ["rlib"]

[dependencies]
pubky-common = { path = "../pubky-common", version = "0.5.4" }
thiserror = "2.0.11"
url = "2.5.4"
bytes = "^1.10.0"
base64 = "0.22.1"
pkarr = { workspace = true, features = ["full"] }
cookie = "0.18.1"
cookie_store = { version = "0.21.1", default-features = false }
flume = { version = "0.11.1", default-features = false, features = ["async"] }
futures-util = "0.3.31"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.12", features = [
    "cookies",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.12", default-features = false }
log = "0.4.25"
wasm-bindgen-futures = "0.4.50"
futures-lite = { version = "2.6.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.95"
futures-lite = "2.6.0"
tracing-subscriber = "0.3.19"
mainline = { version = "5.4.0" }

[package.metadata.docs.rs]
all-features = true
