[package]
name = "pubky-common"
version = "0.3.0"
edition = "2021"
authors = ["Nuh <nuh@nuh.dev>"]
description = "Types and struct in common between Pubky client and homeserver"
license = "MIT"
homepage = "https://github.com/pubky/pubky-core"
repository = "https://github.com/pubky/pubky-core"
keywords = ["pkarr", "pubky", "auth", "pubkey"]
categories = ["web-programming", "authentication", "cryptography"]

[dependencies]
base32 = "0.5.1"
blake3 = "1.5.5"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
once_cell = "1.20.3"
rand = "0.9.0"
thiserror = "2.0.11"
postcard = { version = "1.1.1", features = ["alloc"] }
crypto_secretbox = { version = "0.1.1", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std"] }

pubky-timestamp = { version = "0.4.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
pkarr = { git = "https://github.com/pubky/pkarr", branch = "main", default-features = false, features = [
    "keys",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"

[dev-dependencies]
postcard = "1.1.1"
