[package]
name = "pubky-common"
description = "Types and struct in common between Pubky client and homeserver"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["pkarr", "pubky", "auth", "pubkey"]
categories = ["web-programming", "authentication", "cryptography"]

[dependencies]
base32 = "0.5.1"
blake3 = "1.5.5"
ed25519-dalek = { version = "3.0.0-pre.1", features = ["serde"] }
once_cell = "1.20.3"
rand = "0.9.0"
thiserror.workspace = true
postcard = { version = "1.1.1", features = ["alloc"] }
crypto_secretbox = { version = "0.1.1", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std"] }
pubky-timestamp = { version = "0.4.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
pkarr = { workspace = true, features = ["keys"] }
url.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"

[dev-dependencies]
postcard = "1.1.1"
serde_json = "1"
