[package]
name = "pubky-common"
description = "Types and struct in common between Pubky client and homeserver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["pkarr", "pubky", "auth", "pubkey"]
categories = ["web-programming", "authentication", "cryptography"]

[dependencies]
base32.workspace = true
blake3 = "1"
ed25519-dalek = { version = "3.0.0-pre.1", features = ["serde"] }
once_cell.workspace = true
rand.workspace = true
thiserror.workspace = true
postcard = { version = "1", features = ["alloc"] }
crypto_secretbox = { version = "0.1", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }
pubky-timestamp = { version = "0.4", features = ["full"] }
serde.workspace = true
pkarr = { workspace = true, features = ["keys"] }
url.workspace = true
serde_json.workspace = true
base64.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys.workspace = true
