[package]
name = "pubky-homeserver"
description = "Pubky core's homeserver."
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["web", "dht", "dns", "decentralized", "identity"]
categories = [
    "network-programming",
    "cryptography",
    "web-programming",
    "authentication",
]

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
axum-extra = { version = "0.10", features = [
    "typed-header",
    "async-read-body",
] }
base32 = "0.5"
base64 = "0.22"
bytes = "1"
clap = { workspace = true, features = ["derive"] }
flume = "0.11"
futures-lite = "2"
futures-util = "0.3"
hex = "0.4"
httpdate = "1"
pkarr = { workspace = true, features = ["default", "dht", "tls"] }
pubky-common = { path = "../pubky-common", version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["full"] }
toml = "0.8"
tower-cookies = "0.11"
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
tower = "0.5"
thiserror.workspace = true
dirs = "6"
hostname-validator = "1"
axum-test = "17"
tempfile = "3"
dyn-clone = "1"
reqwest = { workspace = true, features = [
    "rustls",
] }
governor = "0.10"
fast-glob = "0.4"
tokio-util = "0.7"
percent-encoding = "2"
serde_valid = "1"
opendal = { version = "0.54", features = ["services-fs"] }
infer = "0.19"
mime_guess = "2"
dav-server-opendalfs = "0.6"
dav-server = "0.8"
sea-query = { version = "0.32", features = ["with-chrono", "postgres-array"] }
sea-query-binder = { version = "0.7", features = [
    "with-chrono",
    "runtime-tokio",
    "sqlx-postgres",
    "postgres-array",
] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "tls-rustls",
    "json",
] }
dashmap = "6"
async-trait = "0.1"
async-dropper = { version = "0.3", features = ["tokio", "simple"] }
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
pubky_test_utils = { path = "../test_utils/pubky_test", version = "0.1" }
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "metrics"] }
opentelemetry-prometheus = "0.29"
prometheus = "0.14"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand.workspace = true

[dev-dependencies]
# The async_closure feature is not available in early 0.3.x releases.
temp-env = { version = "0.3.6", features = ["async_closure"] }

[features]
default = ["storage-gcs"]
# Optional storage types
storage-gcs = ["opendal/services-gcs"]
storage-memory = ["opendal/services-memory"]

# Optional testing methods
testing = ["storage-memory"]
