[package]
name = "pubky-homeserver"
description = "Pubky core's homeserver."
default-run = "pubky-homeserver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["web", "dht", "dns", "decentralized", "identity"]
categories = [
    "network-programming",
    "cryptography",
    "web-programming",
    "authentication",
]

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
axum-extra = { version = "0.10", features = [
    "typed-header",
    "async-read-body",
] }
base32.workspace = true
base64.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
futures-lite = "2"
futures-util.workspace = true
httpdate.workspace = true
pkarr = { workspace = true, features = ["default", "dht", "tls"] }
pubky-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
toml = "0.8"
tower-cookies = "0.11"
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
tower = "0.5"
thiserror.workspace = true
dirs = "6"
hostname-validator = "1"
tempfile.workspace = true
dyn-clone = "1"
reqwest = { workspace = true, features = [
    "rustls",
] }
governor = "0.10"
fast-glob = "0.4"
tokio-util = "0.7"
percent-encoding = "2"
serde_valid = "1"
opendal = { version = "0.54", features = ["services-fs"] }
infer = "0.19"
mime_guess = "2"
dav-server-opendalfs = "0.6"
dav-server = "0.8"
sea-query = { version = "0.32", features = ["with-chrono", "postgres-array"] }
sea-query-binder = { version = "0.7", features = [
    "with-chrono",
    "runtime-tokio",
    "sqlx-postgres",
    "postgres-array",
] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "tls-rustls",
    "json",
] }
dashmap = "6"
async-trait.workspace = true
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
pubky_test_utils.workspace = true
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "metrics"] }
opentelemetry-prometheus = "0.29"
prometheus = "0.14"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand.workspace = true

[dev-dependencies]
async-dropper = { version = "0.3", features = ["tokio", "simple"] }
axum-test = "17"
hex = "0.4"

[features]
default = ["storage-gcs"]
# Optional storage types
storage-gcs = ["opendal/services-gcs"]
storage-memory = ["opendal/services-memory"]

# Optional testing methods
testing = ["storage-memory"]
